fixed small issue: overflow:hidden on tasks was sometimes a bit funky

--- a/client/src/app/components/molecules/task/task.component.css
+++ b/client/src/app/components/molecules/task/task.component.css
@@ -101,6 +101,7 @@
     /* padding-right: 20px; */
     border-radius: 10px;
 
+    isolation: isolate;
     overflow: hidden;
 }
 
